Fix HTML formatting and add missing closing tags

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p class="reveal-text">Sofisticação e praticidade para a mulher incrível que você é. Que ela te acompanhe em muitos momentos felizes e saudáveis no próximo ano.</p>
             
             <div class="footer-note">
-                <p>Com todo meu amor hoje e sempre, [Seu Nome Aqui]</p>
+                <p>Com todo meu amor hoje e sempre, Junior Alecrim</p>
             </div>
 
             <a href="https://www.youtube.com/watch?v=WIkH5HXNqvI" target="_blank" class="insta-link">Ver o vídeo com detalhes ✨</a>
@@ -63,4 +63,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
