--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section id="intro-section" class="content-card intro-active">
             <div class="card-ornament">🎄✨</div>
             <h1 class="main-title">Para o meu Amor...</h1>
-            <p class="subtitle">Neste Natal, eu queria te dar algo que combinasse com a sua luz e a sua elegância. Preparei uma surpresa com todo o meu carinho.</p>
+            <p class="subtitle">Neste Natal, escolhi uma surpresa feita à mão. Pensei na cor Nude para combinar com sua garrafinha e personalizei a placa de metal com seu nome. Espero que sinta todo o carinho em cada detalhe.</p>
             
             <div class="button-wrapper">
                 <button id="reveal-btn" class="gold-button pulse-animation">
@@ -45,7 +45,7 @@
             <p class="reveal-text">Sofisticação e praticidade para a mulher incrível que você é. Que ela te acompanhe em muitos momentos felizes e saudáveis no próximo ano.</p>
             
             <div class="footer-note">
-                <p>Com todo meu amor hoje e sempre, Junior Alecrim</p>
+                <p>Com todo meu amor hoje e sempre, Junior</p>
             </div>
 
             <a href="https://www.youtube.com/watch?v=WIkH5HXNqvI" target="_blank" class="insta-link">Ver o vídeo com detalhes ✨</a>
@@ -63,5 +63,4 @@
 
     <script src="script.js"></script>
 </body>
-
 </html>
