--- a/index.html
+++ b/index.html
@@ -53,13 +53,7 @@
 
     </main>
     
-    <div class="sparkles-container">
-        <div class="sparkle s1"></div>
-        <div class="sparkle s2"></div>
-        <div class="sparkle s3"></div>
-        <div class="sparkle s4"></div>
-        <div class="sparkle s5"></div>
-    </div>
+    <div class="sparkles-container"></div>
 
     <script src="script.js"></script>
 </body>
